# SoftDesk

./: .gitignore  README.md  pyproject.toml  requirements.txt
Flake8_report/: index.html
SoftDesk/: settings.py  urls.py
core/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20240531_2140.py  0003_auto_20240606_2230.py
